--- a/app/src/main/res/navigation/main_mav.xml
+++ b/app/src/main/res/navigation/main_mav.xml
@@ -25,10 +25,17 @@
         <argument
             android:name="index"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_homeFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="net.asgeri.atlactivity.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <argument
+            android:name="user"
+            app:argType="net.asgeri.atlactivity.User" />
+    </fragment>
 </navigation>
